----------------------------------------------------------------------
 OmegaT 1.7.2 Changes
----------------------------------------------------------------------

1.7.1 vs. 1.7.2

  6 Enhancements
  4 Bugfixes

----------------------------------------------------------------------
1.7.2


Contains a new localisation (Simplified Chinese) and bug fixes

 Implemented requests:
  
  - Have a more complete ISO 639 list in the UI
  http://sourceforge.net/support/tracker.php?aid=1755240

 Other enhancements:

  - Simplified Chinese UI localisation + manual translation
  - French localisation updated to 1.7.1
  - Basque localisation updated to 1.7.1
  - Slovac localisation updated to 1.7.1
  - Serbo-Croatian localisation updated to 1.7.1
 
 Bug fixes:
  
  - Incorrect/unclear data in project_save.txt  
  http://sourceforge.net/support/tracker.php?aid=1616247
  - regression in the JA UI strings 1.7.1 test
  http://sourceforge.net/support/tracker.php?aid=1749787
  - Only try to get MediaWiki page if a string has been entered
  http://sourceforge.net/support/tracker.php?aid=1762625
  - readme_pt_BR.txt is garbled (incorrect encoding?)
  http://sourceforge.net/support/tracker.php?aid=1631735

----------------------------------------------------------------------
 OmegaT 1.7.1 Changes
----------------------------------------------------------------------

1.7.1 vs. 1.6.1_04

  25 Enhancements
  19 Bugfixes

----------------------------------------------------------------------
1.7.1


Contains two new filters (XLIFF and Office 2007 XML), many bug fixes, new features, and general improvements

 Implemented requests:

  - Jump to segment #
  http://sourceforge.net/support/tracker.php?aid=1086959

  - Indicate number of results in search window
  http://sourceforge.net/support/tracker.php?aid=1427915

  - Log file l10n and debugging
  http://sourceforge.net/support/tracker.php?aid=1209835

  - Ctrl+Delete, Ctrl+Backspace, and overwriting with Ctrl+i